[project]
name = "zentrapay"
version = "0.1.0"
description = "This is an api layer of the currency cloud connectorto the payment service"
readme = "README.md"
authors = [
    { name = "dlion4", email = "dantemilimo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "faker>=40.11.1",
    "fastapi[all]>=0.135.2",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
